Fixed extra padding from a few commits ago, to also apply to password inputs.

--- a/myewb/media/css/myewb2.css
+++ b/myewb/media/css/myewb2.css
@@ -403,7 +403,7 @@ input[type="reset"]
 }
 
 
-.inlineLabels input[type="text"] {
+.inlineLabels input[type="text"], .inlineLabels input[type="password"] {
 padding: 4px;
 }
 /*
